# ai-multi-tools

./: README.md  requirements.txt
3-Simple-AIs/agent/: main.py
3-Simple-AIs/image_analizer/: README.md  pyproject.toml
3-Simple-AIs/pdf_reader/: pyproject.toml
agent/: README.md  pyproject.toml
ai-platform/: README.md  main.py  pyproject.toml  requirements.txt
ai-platform/gemini-api/: README.md  main.py  pyproject.toml  requirements.txt
ai-platform/openai-api/: README.md  main.py  pyproject.toml  requirements.txt
image_analizer/: main.py
pdf_reader/: README.md  main.py
