[project]
name = "openai-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.28.1",
    "openai>=2.32.0",
    "pandas>=2.3.3",
    "pillow>=12.2.0",
    "pypdf2>=3.0.1",
    "pytesseract>=0.3.13",
    "python-dotenv>=1.2.2",
    "streamlit>=1.56.0",
]
